// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > Should render title and button with Shop button 1`] = `
<div>
  <div
    style="display: flex; background-color: darkgray; width: 100%; margin-bottom: 5pt;"
  >
    <h1
      style="width: 20%; font-size: 22pt; margin: 0.5em;"
    >
      Title
    </h1>
    <div
      style="width: 60%;"
    />
    <div
      style="width: 20%;"
    >
      <button
        aria-label="Go to Shop"
        style="margin: auto;"
      >
        Shop
      </button>
    </div>
  </div>
</div>
`;

exports[`Header > Should render title and button with Shopping button 1`] = `
<div>
  <div
    style="display: flex; background-color: darkgray; width: 100%; margin-bottom: 5pt;"
  >
    <h1
      style="width: 20%; font-size: 22pt; margin: 0.5em;"
    >
      Title
    </h1>
    <div
      style="width: 60%;"
    />
    <div
      style="width: 20%;"
    >
      <button
        aria-label="Go to Shopping"
        style="margin: auto;"
      >
        Shopping
      </button>
    </div>
  </div>
</div>
`;
